[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/cannon.png" type="Texture" id=1]
[ext_resource path="res://Enemy/cannon.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.6248, 3.58784 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.7896, 11.4712 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 11.0319 )

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -1.5, 20.75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2.24426, -46.1137 )
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( -1.5, 20.75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -12.6504, -32.344 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11.0503 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -37.4799, -10.5182 )
scale = Vector2( 8.79837, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -9.99868, -16.6865 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area_body_exited"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
